fix: environment variables

--- a/test-backend/src/main/resources/application.properties
+++ b/test-backend/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost:33060/test
-spring.datasource.username=root
-spring.datasource.password=alexiz
-spring.datasource.drive-class-name=com.mysql.jdbc.Driver
-
-spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=prod
